# CeleryProject

./: pyproject.toml
apps/clients/: admin.py  tasks.py  urls.py  views.py
apps/clients/migrations/: 0001_initial.py
apps/clients/models/: __init__.py  client.py  message.py  task.py
apps/main/: models.py  urls.py
apps/users/: urls.py  views.py
config/: settings.py  urls.py
